2001-11-27  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot (elf): elf changed location of index. Fixed.

2001-11-25  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Factory.pm (get_comics): Fixed typo in the "Please, before
	sending in a bug..." message.

2001-11-19  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (machall): Fixed error grammer stupid!
	(chopping): Added by Shawn Oakey.
	(oddjobs): Added by Shawn Oakey.
	(miracle): Added by Shawn Oakey.
	(ua): Added by Shawn Oakey.
	(machall): Screwed with machall...again...

2001-11-18  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML.pm: Commented out debugging messages that appear to be
	months old.
	* lib/doemain (doemain): Updated for sanity.
	* lib/keenspace (machall): Wrote a machall module.
	* lib/keenspot (elf): Updated missing comics list.

2001-11-16  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (roses): Updated missing comics list.
	* lib/keenspot (exploit): Updated missing comics list.
	* lib/sluggy_freelance (sluggy): Updated missing comics list.

2001-11-15  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Added a "Today's Comics" feature.
	* Netcomics/HTML/Set.pm (new): $webpage_filename_tmpl changed to a
	property of the Set class so it can be overrided.
	* Netcomics/HTML/Page.pm (new): $webpage_filename_tmpl changed to a
	property of the Page class so it can be overrided.
	* Netcomics/Util.pm (rlis_hash): Neccessary for the "Today's Comics"
	feature.
	* Netcomics/HTML.pm (create_today_page): Initial commit for this 
	function.
	* Netcomics/Config.pm.in: Added control variables for "Today's Comics".
	* lib/keenspot (elf): updated Elf life missing dates.

2001-11-14  Elliot Glaysher  <glaysher@umich.edu>

	* The "I should probably get off my lazy butt and do something" commit.
	* lib/keenspace: Alphabetized order of comic modules.
	* lib/keenspot (avalon): Updated Avalon's @missing list.